[package]
name = "wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2.74", features = ["serde-serialize"] }
