[package]
name = "wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.10.0"
serde = { version = "1.0", features = ["derive", "rc"] }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
syn = "1.0.99"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "CanvasRenderingContext2d",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "InputEvent",
  "Node",
  "MouseEvent",
  "TextMetrics",
  "Window",
]
