[package]
name = "wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1.10.0"
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"] }
serde = { version = "1.0", features = ["derive", "rc"] }
uuid = { version = "1.3.0", features = ["v4", "js"] }
wasm-bindgen = { version = "0.2.83", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.34"
wasm-timer = "0.2.5"

[dependencies.web-sys]
version = "0.3.60"
features = [
  "CanvasRenderingContext2d",
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "HtmlInputElement",
  "InputEvent",
  "KeyboardEvent",
  "Node",
  "MouseEvent",
  "TextMetrics",
  "Window",
]
